# torchfaiss

./: .gitignore  README.md  benchmark.py  benchmark_20x.py  benchmark_faiss.py  benchmark_faiss_20x.py  benchmark_precision_modes.py  compare_results.py  create_20x_features.py  eval_utils.py  extract_features.py  profile_kmeans_train.py  pyproject.toml  requirements.txt  setup.py
docs/: index.html  styles.css
results/: faiss_result.json  torchfaiss_result.json
results/evaluation_reports/: summary.json
results/evaluation_reports/faiss_gpu/: curve_data.json  detailed_metrics.json  per_class_metrics.csv
results/evaluation_reports/torchfaiss_dist_8gpu/: curve_data.json  detailed_metrics.json  per_class_metrics.csv
results_20x/: faiss_result.json  torchfaiss_result.json
results_20x/evaluation_reports/: summary.json
results_20x/evaluation_reports/faiss_gpu/: curve_data.json  detailed_metrics.json  per_class_metrics.csv
results_20x/evaluation_reports/torchfaiss_dist_8gpu/: curve_data.json  detailed_metrics.json  per_class_metrics.csv
results_20x_faiss_retest/: FAISS_EVALUATION_REPORT.md
results_faiss_retest/: FAISS_EVALUATION_REPORT.md
torchfaiss/: __init__.py  kmeans.py
